[gd_scene load_steps=6 format=3 uid="uid://bq4dhjaolq6xc"]

[ext_resource type="Texture2D" uid="uid://bukpfuwqn8g1x" path="res://Assets/sprite_sheet_3.png" id="1_vxph5"]
[ext_resource type="Script" uid="uid://dik130qbctr7t" path="res://Bosses/Boss1/attacks/boss_1_jcb_drag_attack.gd" id="1_x7mr3"]
[ext_resource type="PackedScene" uid="uid://dvdow8bt5ksa7" path="res://Bosses/Boss1/mole_ball.tscn" id="3_nu5ie"]
[ext_resource type="AudioStream" uid="uid://e2xd0skfi05y" path="res://Assets/Sfx/flamethrower.wav" id="4_ruw1v"]

[sub_resource type="CircleShape2D" id="CircleShape2D_vxph5"]
radius = 116.0

[node name="boss1_jcb_drag_attack" type="Node2D" node_paths=PackedStringArray("drag_sfx")]
script = ExtResource("1_x7mr3")
drag_sfx = NodePath("AudioStreamPlayer2D")

[node name="jcb_arm" type="Node2D" parent="."]

[node name="jcb_arm_sprite" type="Sprite2D" parent="jcb_arm"]
texture = ExtResource("1_vxph5")
offset = Vector2(320, 0)
region_enabled = true
region_rect = Rect2(0, 320, 704, 128)

[node name="jcb_pivot" type="Node2D" parent="."]
position = Vector2(0, 640)

[node name="jcb_claw" type="Node2D" parent="."]
position = Vector2(0, 832)

[node name="mole_ball" parent="jcb_claw" instance=ExtResource("3_nu5ie")]

[node name="jcb_claw_sprite" type="Node2D" parent="jcb_claw"]
position = Vector2(0, -64)

[node name="mole_collection_area" type="Area2D" parent="jcb_claw/jcb_claw_sprite"]
position = Vector2(32, 64)
collision_layer = 0
collision_mask = 6

[node name="CollisionShape2D" type="CollisionShape2D" parent="jcb_claw/jcb_claw_sprite/mole_collection_area"]
shape = SubResource("CircleShape2D_vxph5")

[node name="jcb_claw_top" type="Sprite2D" parent="jcb_claw/jcb_claw_sprite"]
z_index = 3
position = Vector2(32.0003, 0.000350952)
rotation = 1.57079
texture = ExtResource("1_vxph5")
region_enabled = true
region_rect = Rect2(0, 0, 256, 320)

[node name="jcb_claw_bottom" type="Sprite2D" parent="jcb_claw/jcb_claw_sprite"]
z_index = -1
position = Vector2(32.0003, 96.0004)
rotation = 1.57079
texture = ExtResource("1_vxph5")
region_enabled = true
region_rect = Rect2(256, 0, 256, 320)

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(0, 640)
zoom = Vector2(0.41, 0.41)

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("4_ruw1v")

[connection signal="area_entered" from="jcb_claw/jcb_claw_sprite/mole_collection_area" to="." method="_on_mole_collection_area_area_entered"]
